--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ shinyServer(
   <article data-timings="">
     <ol>
 <li>Anyone can run the app at: 
-<a href="https://steniofernandes.shinyapps.io/DDP_HistApp/">https://steniofernandes.shinyapps.io/DDP_HistApp/</a></li>
+<a href="https://steniofernandes.shinyapps.io/HistApp/">https://steniofernandes.shinyapps.io/HistApp/</a></li>
 </ol>
 
   </article>
